[tool.poetry]
name = "inline-ml"
version = "0.1.0"
description = ""
authors = ["Liam Eckert <liameckert17@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llvmcpy = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
